2007-07-10  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/3dTruchet.scm: TinyScheme doesn't like
	inexact numbers to start with a decimal point. Added leading '0' to
	two instances of '.2'.

2007-07-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg-save.[ch]: fixed an issue with the latest
	changes. Now "Load Defaults" does also work if "Save Defaults"
	wasn't used before.

2007-07-09  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_setup): added evil hack to work
	around bug #327243 in GtkFileChooserButton.

2007-07-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.c (run): when the save procedure is being
	called with GIMP_RUN_WITH_LAST_VALS and the image doesn't have the
	"jpeg-save-options" parasite set, show the dialog to give the user
	control over the JPEG encoding parameters.

2007-07-08  Martin Nordholts  <martinn@svn.gnome.org>

	Completely rewrote logic in gimp_rectangle_tool_motion, in effect
	also fixing bug #353936 and bug #398188. The general strategy now
	is to have specialized functions doing one thing, and one thing
	only.

	The patch also makes adjusting the rectangle through the keyboard
	and through the rectangle tool options follow tool options.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
	Completely refactored.

	(gimp_rectangle_tool_active_modifier_key):
	(gimp_rectangle_tool_update_options): Submit to tool options.

	(gimp_rectangle_tool_apply_coord)
	(gimp_rectangle_tool_clamp)
	(gimp_rectangle_tool_clamp_width)
	(gimp_rectangle_tool_clamp_height)
	(gimp_rectangle_tool_keep_inside)
	(gimp_rectangle_tool_keep_inside_horizontally)
	(gimp_rectangle_tool_keep_inside_vertically)
	(gimp_rectangle_tool_apply_fixed_width)
	(gimp_rectangle_tool_apply_fixed_height)
	(gimp_rectangle_tool_apply_aspect)
	(gimp_rectangle_tool_update_with_coord)
	(gimp_rectangle_tool_get_constraints)