@@ -1,3 +1,9 @@
+2007-07-11  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* app/tools/gimprectangletool.c: Removed bitfieldized values from
+	the SideToResize enum, they are irrelevant. Also renamed
+	HANDLE_SIZE to MAX_HANDLE_SIZE.
+
 2007-07-10  Kevin Cozens  <kcozens@cvs.gnome.org>
 
 	* plug-ins/script-fu/scripts/3dTruchet.scm: TinyScheme doesn't like
